[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-prompt-version-py"
version = "0.1.0"
description = "Version and hash LLM prompt templates"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "prompt", "versioning", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/llm-prompt-version-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_prompt_version = ["py.typed"]
